# pipecat-examples

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
1000-concurrent-agents/: README.md  bot.py  env.example  pcc-deploy.toml  pyproject.toml  start_agents.py
audio-recording-s3-multipart-upload/: Dockerfile  README.md  bot.py  create_s3_role.sh  env.example  pyproject.toml
audio-recording-s3-multipart-upload/bot_utils/: audio_upload_util.py
aws-agentcore/: .gitignore  README.md  bot.py  env.example  pyproject.toml
aws-agentcore/agents/: code_agent.py  dummy_agent.py  pyproject.toml
aws-strands/: README.md  black-box.py  explain-thinking.py  pyproject.toml  requirements.txt
bandwidth-chatbot/inbound/: README.md  bot.py  env.example  pyproject.toml  server.py
bot-ready-signalling/: README.md
cartesia-studypal/: README.md  bot.py  pyproject.toml
chatbot-audio-recording/: bot.py  requirements.txt  runner.py  server.py
code-helper/: README.md
daily-custom-tracks/: README.md  bot.py  custom_track_sender.py  env.example  index.html  pyproject.toml
daily-multi-translation/: README.md  bot.py  pyproject.toml  server.py
daily-voice-client/: README.md  bot.py  env.example  pyproject.toml
deployment/aws-agentcore-daily/: README.md  pyproject.toml
deployment/aws-agentcore-daily/agent/: daily_agentcore_prep.py  daily_agentcore_workarounds.py  env.example  pipecat-agent.py  pyproject.toml
deployment/aws-agentcore-daily/scripts/: configure.sh  destroy.sh  launch.sh  setup-iam-role.sh  setup-vpc.sh
deployment/aws-agentcore-daily/server/: env.example  server.py
deployment/aws-agentcore-webrtc/: .gitignore  README.md  pyproject.toml
deployment/aws-agentcore-webrtc/agent/: env.example  pipecat-agent.py  pyproject.toml  requirements.txt
deployment/aws-agentcore-webrtc/agent/scripts/: destroy.sh
deployment/aws-agentcore-webrtc/scripts/: configure.sh  launch.sh  setup-iam-role.sh  setup-vpc.sh
deployment/aws-agentcore-webrtc/server/: env.example  server.py
deployment/flyio-example/: bot.py  bot_runner.py  pyproject.toml  requirements.txt
exotel-chatbot/: Dockerfile  README.md  bot.py  requirements.txt  server.py
fal-smart-turn/: README.md
faster-than-realtime/: README.md  bot.py  env.example
file-upload/: .gitignore  AGENTS.md  README.md
file-upload/server/: .env.example  bot.py  pcc-deploy.toml  pyproject.toml
freeze-test/: README.md  freeze_test_bot.py  pyproject.toml
freeze-test/client/: package-lock.json  package.json
freeze-test/client/src/: app.ts
gemini-live-starters/phone-bot/: Dockerfile  README.md  bot-cascade.py  bot.py  env.example  game_content.py  pcc-deploy.toml  pyproject.toml
gradium-starters/: README.md
gradium-starters/server/: bot.py  env.example  pcc-deploy.toml  pyproject.toml
instant-voice/: README.md
instant-voice/server/: pyproject.toml  requirements.txt
instant-voice/server/src/: server.py  single_bot.py  single_openai_bot.py
ivr-navigation/: README.md  bot.py  env.example  pcc-deploy.toml  pyproject.toml  server.py
live2d-video-agent/: 30-live2d.py  requirements.txt
load-test/: .gitignore  Dockerfile  README.md  bot.py  env.example  pcc-deploy.toml  pyproject.toml  start_agents.py
local-input-select-stt/: README.md  bot.py  pyproject.toml
local-ollama-whisper-piper/: README.md  botLocal.py
local-smart-turn/: README.md
local-smart-turn/server/: bot.py  env.example  pyproject.toml  requirements.txt  runner.py  server.py
moondream-chatbot/: bot.py  requirements.txt  server.py
moq/agent-server/: README.md  agent.py  bot.py  env.example  pyproject.toml  server.py
multi-llm-fallback-recovery/: .env.example  botLLMFB.py  requirements.txt
multi_llm_fallback_runtime_recovery/: README.md
news-chatbot/server/: README.md  bot.py  news_bot.py  pyproject.toml  requirements.txt  server.py
open-telemetry/: README.md
open-telemetry/arize-with-turn-audio-gemini-live/: README.md  bot.py  env.example  pyproject.toml
open-telemetry/arize-with-turn-audio-gemini-live/bot_utils/: audio_turn_observer.py
open-telemetry/arize-with-turn-audio-gemini-live/test/: verify_turn_audio.py
outbound-sales/: .gitignore  CLAUDE.md  README.md
patient-intake/: bot.py  server.py
phone-chatbot/: README.md
plivo-chatbot/: README.md  bot.py  requirements.txt
push-to-talk/: README.md
runner-examples/: 01-create-transport-bot.py  01-single-transport-bot.py  02-two-transport-bot.py  02-verbose-transport-bot.py  03-all-transport-bot.py  04-all-transport-factory-bot.py  README.md  env.example  pyproject.toml  requirements.txt
scripts/: demos.json  smoke_test_demo.py
sentry-metrics/: bot.py  requirements.txt
simple-chatbot/: README.md
sms-verification/: .gitignore  README.md
speculative-user-aggregator/: README.md  bot.py  env.example  pcc-deploy.toml  pyproject.toml
storytelling-chatbot/: README.md
studypal/: README.md  bot.py  env.example  pcc-deploy.toml  pyproject.toml  requirements.txt  runner.py  studypal.py
summary-chatbot/: Dockerfile  README.md  bot.py  env.example  index.html  requirements.txt  runner.py  server.py
tavus-avatar/: README.md
telnyx-chatbot/: README.md  bot.py  requirements.txt
translation-chatbot/: Dockerfile  bot.py  env.example  pcc-deploy.toml  pyproject.toml  server.py
travel-companion/: README.md
twilio-chatbot/: README.md  (+2 more)
vonage-ac-s2s/: README.md  env.example  pyproject.toml  server.py
vonage-ac-s2s/client/: README.md  connect_and_stream.py  connect_and_stream_vonage.py  env.example  pyproject.toml
vonage-audio-bot/: README.md  bot.py  env.example  pyproject.toml  server.py
websocket/: .gitignore  Dockerfile  README.md  bot.py  env.example  pcc-deploy.toml  pyproject.toml  server.py
websocket/client/: README.md  env.example  index.html  package-lock.json  package.json  vite.config.js
websocket/client/src/: app.ts  style.css
websocket/pipecat-cloud/: Dockerfile  bot.py  pyproject.toml
websocket/server/: bot_fast_api.py  bot_websocket_server.py  pcc-deploy.toml  pyproject.toml  server.py
(+583 files in other folders)
