# Minimal project metadata for tooling
[project]
name = "pipecat-examples"
version = "0.0.0"
description = "Examples for Pipecat AI framework"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.12.1",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.ruff]
exclude = [".git", "*_pb2.py"]
line-length = 100

[tool.ruff.lint]
select = ["I"]
ignore = []