[project]
name = "pipecat-examples"
version = "0.0.0"
description = "Examples for Pipecat AI framework"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.13.0",
    "deepgram-sdk>=4.8.1",
    "fastapi[all]>=0.116.2",
    "loguru>=0.7.3",
    "pipecat-ai[elevenlabs,google,openai,runner,silero,webrtc,websocket-transport]>=0.0.82",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.12.1",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.ruff]
exclude = [".git", "*_pb2.py"]
line-length = 100

[tool.ruff.lint]
select = ["I"]
ignore = []
