[project]
name = "audio-recording-s3-multipart-upload"
version = "0.1.0"
description = "Example bot that saves audio files to an AWS s3 bucket"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "boto3==1.40.27",
    "pipecat-ai[cartesia,daily,deepgram,google,runner,silero,webrtc]==0.0.99",
    "pipecatcloud>=0.2.18",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]