[project]
name = "agentcore"
version = "0.1.0"
description = "Example of a Pipecat bot that uses an agent deployed to Amazon Bedrock AgentCore Runtime"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[cartesia,daily,deepgram,local-smart-turn-v3,openai,runner,silero,webrtc,aws]",
]

[dependency-groups]
dev = [
    "strands-agents",
    "strands-agents-tools",
    "bedrock-agentcore-starter-toolkit",
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]

[tool.uv.sources]
pipecat-ai = { path = "../../pipecat", editable = true }
