[project]
name = "aws-strands"
version = "0.1.0"
description = "Pipecat example - aws-strands"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pipecat-ai[webrtc,daily,deepgram,cartesia,silero]>=1.0.0",
    "strands-agents",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
