[project]
name = "daily-multitranslation"
version = "0.1.0"
description = "Daily Multitranslation bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[daily,webrtc,websocket,cartesia,google,silero,deepgram,runner,soundfile]>=0.0.102",
  "pipecatcloud>=0.2.20",
  "aiofiles"
]
