[project]
name = "freeze-test"
version = "0.1.0"
description = "Pipecat example - freeze-test"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "fastapi[all]",
    "uvicorn",
    "pipecat-ai[silero,websocket,openai,deepgram,cartesia,sentry]==0.0.99",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
