[project]
name = "load-test"
version = "0.1.0"
description = "Load test bot that plays a video on loop using GStreamer"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pipecat-ai[daily,webrtc,runner,gstreamer]>=0.0.99",
    "pipecatcloud>=0.2.9",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
