[project]
name = "studypal"
version = "0.2.0"
description = "Studypal example"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[daily,webrtc,websocket,cartesia,openai,silero,runner]>=1.3.0",
    "pipecatcloud>=0.7.1",
    "pypdf>=4.3.1",
    "tiktoken>=0.12.0"
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
