[project]
name = "vonage-audio-bot"
version = "0.1.0"
description = "Vonage Audio Connector voice chatbot example using Pipecat + OpenAI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[openai,websocket,silero,runner]>=0.0.101",
  "opentok>=3.0.0",
  "vonage>=3.3.1",
  "sounddevice>=0.4.0",
  "python-dotenv",
  "pydub>=0.25",
  "PyJWT>=2.8.0",
]

