[project]
name = "websocket-example"
version = "0.1.0"
description = "Example for building voice AI bots with Pipecat built using Websocket"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "uvicorn",
    "pipecat-ai[silero,websocket,google,runner]>=1.3.0",
    "pipecatcloud>=0.7.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
