[project]
name = "file-upload"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[anthropic,cartesia,daily,deepgram,runner,silero,webrtc]>=1.4.0",
    "pipecatcloud",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]

[tool.uv.sources]
pipecat-ai = { path = "/Users/mattieruth/src/pipecat/pipecat", editable=true }