[project]
name = "pipecat-gemini-live"
version = "0.1.0"
description = "Gemini Live + Twilio example for building voice AI bots with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[webrtc,websocket,silero,google,runner]>=1.0.0",
    "pipecatcloud>=0.4.4"
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]