[project]
name = "gradium-web-bot"
version = "0.1.0"
description = "Gradium voice bot starter for web and WhatsApp"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[daily,openai,runner,silero,webrtc]>=1.3.0",
    "pipecatcloud>=0.7.1",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
