[project]
name = "instant-voice-server"
version = "0.1.0"
description = "Instant Voice Server"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "fastapi[all]",
    "uvicorn",
    "pipecat-ai[azure,openai,silero,websocket,google,daily]>=0.0.93",
]

[tool.ruff]
exclude = [".git", "*_pb2.py"]
line-length = 100

[tool.ruff.lint]
select = [
    "I", # Import rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"
