[project]
name = "server"
version = "0.1.0"
description = "Pipecat example - server"
requires-python = ">=3.10"
dependencies = [
    "pipecatcloud",
    "pipecat-ai[google,daily,deepgram,cartesia,silero,local-smart-turn-v3]>=0.0.99",
    "python-dotenv",
    "aiohttp",
    "pillow",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
