[project]
name = "news-chatbot"
version = "0.1.0"
description = "Pipecat example - news-chatbot"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "fastapi[all]",
    "uvicorn",
    "pipecat-ai[daily,google,deepgram,cartesia,silero,openai]==0.0.99",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
