[project]
name = "pipecat-arize-with-turn-audio-gemini-live"
version = "0.1.0"
description = "Pipecat + OpenInference/Arize tracing using Google Gemini Live, with per-turn audio uploaded to S3 and linked from each turn span."
requires-python = ">=3.11"
dependencies = [
    "arize-otel>=0.11.0",
    "boto3>=1.34.0",
    "openinference-instrumentation>=0.1.42",
    "openinference-instrumentation-pipecat>=2.0.0",
    "pipecat-ai[daily,google,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.4.4",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

phoenix = [
    "arize-phoenix>=12.30.0",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
